--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@
 @tailwind base;
 @tailwind components;
 
+@font-face {
+  font-family: "FingerPaint";
+  src: local("FingerPaint"), url(./assets/fonts/fingerPaint.ttf) format("ttf");
+}
 @tailwind utilities;
